--- a/todo.html
+++ b/todo.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     </div>
-    <script src = "java.js"></script>
+    <script src = "todo.js"></script>
 </body>
 
 </html>
