--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body class="bg-white">
 
   <div class="container mt-5">
-
+     <div class="row justify-content-center"></div>
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4"></div>
     <h1 class="mb-4 text-center">Meu Site</h1>
 
     <!-- MENU -->
@@ -24,11 +25,6 @@
       <a href="clima.html" class="btn btn-success">API clima</a>
       <a href="cep.html" class="btn btn-warning">API CEP(funcional)</a>
     </div>
-
-
-
-    
-
   </div>
 </body>
 </html>
