--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
   <meta charset="UTF-8">
   <title>Meu Site</title>
 
-  <!-- Bootstrap CSS -->
   <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet">
-    
-
 </head>
+
 <body class="bg-white">
 
   <div class="container mt-5">
-     <div class="row justify-content-center"></div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-4"></div>
-    <h1 class="mb-4 text-center">Meu Site</h1>
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-8 col-md-6 col-lg-4">
 
-    <!-- MENU -->
-    <div class="d-grid gap-3 col-3 mx-auto">
-      <a href="calculadora.html" class="btn btn-primary">Calculadora</a>
-      <a href="todo.html" class="btn btn-secondary">To-do List</a>
-      <a href="clima.html" class="btn btn-success">API clima</a>
-      <a href="cep.html" class="btn btn-warning">API CEP(funcional)</a>
+        <h1 class="mb-4 text-center">Meu Site</h1>
+
+        <div class="d-grid gap-3">
+          <a href="calculadora.html" class="btn btn-primary">Calculadora</a>
+          <a href="todo.html" class="btn btn-secondary">To-do List</a>
+          <a href="clima.html" class="btn btn-success">API clima</a>
+          <a href="cep.html" class="btn btn-warning">API CEP (funcional)</a>
+        </div>
+
+      </div>
     </div>
   </div>
+
 </body>
 </html>
