--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <div class="container mt-5">
     <div class="row justify-content-center">
-      <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+      <div class="col-12 col-md-10 col-lg-8">
+
 
         <h1 class="mb-4 text-center">Meu Site</h1>
 
