--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Meu Site</title>
+  <head>
+    <meta charset="UTF-8">
+    <title>Meu Site</title>
 
-  <link 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    >
+  </head>
 
-<body class="bg-white">
+  <body class="bg-white">
 
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-8 col-lg-6">
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6">
 
+          <div class="card p-4 shadow-sm">
 
+            <h1 class="mb-4 text-center">Meu Site</h1>
 
-        <h1 class="mb-4 text-center">Meu Site</h1>
+            <div class="d-grid gap-3">
+              <a href="calculadora.html" class="btn btn-primary">Calculadora</a>
+              <a href="todo.html" class="btn btn-secondary">To-do List</a>
+              <a href="clima.html" class="btn btn-success">API clima</a>
+              <a href="cep.html" class="btn btn-warning">API CEP</a>
+            </div>
 
-        <div class="d-grid gap-3">
-          <a href="calculadora.html" class="btn btn-primary">Calculadora</a>
-          <a href="todo.html" class="btn btn-secondary">To-do List</a>
-          <a href="clima.html" class="btn btn-success">API clima</a>
-          <a href="cep.html" class="btn btn-warning">API CEP (funcional)</a>
+          </div>
+
         </div>
-
       </div>
     </div>
-  </div>
 
-</body>
+  </body>
 </html>
